syntax = "proto3";

package item.v1;

message CreateNewItem {
    string name = 1;
    string brand = 2;
    string package = 3;
    float pricePerItem = 4;
    float pricePerQuantity = 5;
    string quantityUnit = 6;
    string url = 7;
    string imageUrl = 8;
}

message CreateItemResponse {
    string uuid = 1;
    string name = 2;
    string brand = 3;
    string package = 4;
    float pricePerItem = 5;
    float pricePerQuantity = 6;
    string quantityUnit = 7;
    string url = 8;
    string imageUrl = 9;
}